# rich-objects

./: Makefile  README.md  pyproject.toml
.github/workflows/: lint.yaml  pypi_publish.yaml  test.yaml
rich_objects/: __init__.py  console.py  constants.py  display.py  enums.py  rich_table.py  table_config.py
tests/: helpers.py  test_console.py  test_display.py
