[project]
name = "rich-objects"
version = "0.1.3"
description = ""
authors = [
    {name = "Rick Porter",email = "rickwporter@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich (>=14.2.0,<15.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Topic :: Utilities",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.9"
pytest = "^8.4.0"
coverage = "^7.9.1"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "W",  # pycodestyle warnings
    "B",  # flake8-bugbear
    "PL",  # pylint
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming conventions
]
fixable = [
    "D", "E", "I", "W",
]
ignore = [
    "PLR1711",  # "useless" returns make the code more readable
]

[tool.ruff.lint.per-file-ignores]
# ignore the unused imports in init
"__init__.py" = ["F401"]
"tests/*" = [
    "D",  # no need for docstrings on tests
    "PLR2004",  # magic numbers allowed in tests
]

[tool.ruff.lint.isort]
force-single-line = true
split-on-trailing-comma = true

[tool.ruff.lint.pylint]
max-args = 25
max-branches = 12
max-returns = 10
max-statements = 75

[tool.coverage.run]
data_file = ".coverage"
source = [
    "rich_objects",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
]

